@@ -430,7 +430,7 @@
         etc/index.hml to show the new doxygen package you installed</li>
         <li>bin/diff-builds-and-group-fixed-tests-only.sh to give the correct default old_date for this release.</li></ul>
       <li>
-        Update the NEWS, TAO/NEWS, and TAO/CIAO/NEWS files to have a new section for the next release.</li>
+        Update the NEWS, TAO/NEWS, TAO/DAnCE/NEWS, and TAO/CIAO/NEWS files to have a new section for the next release.</li>
       <li>
         Update OpenSuSE Build service using
         <code>
