@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.0.4 and ACE-6.0.5
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.0.3 and ACE-6.0.4
 ====================================================
 
